--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
-title: OneV's Den
-subtitle: 上善若水，人淡如菊
+title: Chen's Blog
+subtitle: 事在人为 落子不悔
 welcome_message: ObjC 中国与 objc.io 合作最新作品<a href="https://objccn.io/products/" target="_blank">《函数式 Swift》,《Core Data》,《Swift 进阶》及《集合类型优化》已经发布</a>，<a href="https://www.boxueio.com/register/ec84c3dd183b0acc820d5eae474d499d">泊学网正在开展订阅赠书活动，也欢迎前往了解</a>
-description: 嗨，我是王巍 (@onevcat)，一名来自中国的 iOS / Unity 开发者。现居日本，就职于 LINE。正在修行，探求创意之源。
+description: 嗨，我是 陈 光，一名来自中国的 iOS 开发者，正在修行，躬行慎思以求真。
 creator: <a href="http://onev.cat">@onevcat</a>
 
 url: "http://onevcat.com"
@@ -20,6 +20,8 @@ blog_button:
     description: 访问博客
 
 nav:
+    - {title: 简历, description: 我的简历, url: 'https://onev.cat'}
+    - {title: 简历, description: 我的简历, url: 'https://onev.cat'}
     - {title: 简历, description: 我的简历, url: 'https://onev.cat'}
     - {title: 关于, description: 了解更多关于我, url: 'http://about.onevcat.com/'}
     - {title: 订阅, description: 邮件订阅本站, url: '//store.objccn.io/subscribe'}
